<resources>
    <string name="app_name">SalesApp</string>
    <string name="button_for_created_order">button for created order</string>
    <string name="button_for_include_item">button_for_include_item</string>
    <string name="product">Produto: </string>
    <string name="description">Descrição: </string>
    <string name="price">Preço</string>
    <string name="amount">Quantidade</string>
    <string name="name_of_product">Nome do produto</string>
    <string name="description_of_product">Descrição do produto</string>
    <string name="value_standard">R$ 0,00</string>
    <string name="title_add_items">Adicionar itens</string>
    <string name="include">Incluir</string>
    <string name="price_un">Preço Un:</string>
    <string name="total_price">Total :</string>
    <string name="total_of_items">Itens :</string>
    <string name="total_of_values">Valores :</string>
    <string name="title_toolbar_order">Pedido</string>
    <string name="bnt_save">Salvar</string>
    <string name="order_list">Lista de pedidos</string>
    <string name="message_no_item_add">Você ainda não adicionou\n nenhum item !"</string>
    <string name="message_no_order">Você não tem nenhum\n pedido finalizado !</string>
    <string name="order_number">Pedido cliente %s</string>
    <string name="error_amount_is_zero">"Quantidade deve ser maior que 0"</string>
    <string name="error_product_amount_is_empty">"Digite a quantidade do produto"</string>
    <string name="error_product_description_is_empty">Digite a descrição do produto</string>
    <string name="error_product_name_is_empty">Digite o nome do produto</string>
    <string name="error_product_price_is_empty">"Digite o valor do produto"</string>
    <string name="error_product_price_is_zero">"Valor tem que ser maior que 0"</string>
    <string name="error_name_client_is_empty">Digite o nome do cliente</string>
    <string name="title_delete_dialog">"Deseja realmente deletar o pedido ?"</string>
    <string name="positive_button_dialog">Sim</string>
    <string name="negative_button_dialog">Não</string>
    <string name="client_name">Nome do cliente</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>