<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/title_add_items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/name_of_product"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@id/tv_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_product_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/description_of_product"
            app:layout_constraintEnd_toEndOf="@+id/til_product_name"
            app:layout_constraintStart_toStartOf="@+id/til_product_name"
            app:layout_constraintTop_toBottomOf="@+id/til_product_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_product_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/price"
            app:layout_constraintEnd_toStartOf="@id/til_amount"
            app:layout_constraintStart_toStartOf="@id/til_product_description"
            app:layout_constraintTop_toBottomOf="@id/til_product_description">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_price"
                android:inputType="numberDecimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/amount"
            app:layout_constraintEnd_toEndOf="@id/til_product_description"
            app:layout_constraintStart_toEndOf="@id/til_price"
            app:layout_constraintTop_toBottomOf="@id/til_product_description">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_amount"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_include_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/include"
            android:layout_marginBottom="10dp"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_price" />
    </androidx.constraintlayout.widget.ConstraintLayout>