<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/status_bar_color"
    tools:context=".ui.orderregistration.OrderRegistrationActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/toobarTextStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_number_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            style="@style/textStyle"
            android:text="@string/title_toolbar_order"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <ImageButton
            android:id="@+id/btn_add_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:contentDescription="@string/button_for_include_item"
            android:padding="8dp"
            android:src="@drawable/ic_add"
            app:tint="@color/black" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_order_registration"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@id/cl_total"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_total"
        android:layout_width="0dp"
        android:background="@color/white"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@id/cv_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rv_order_registration">

        <TextView
            android:id="@+id/tv_total_items"
            style="@style/textStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/total_of_items"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_result_total_items"
            style="@style/textStyle"
            android:layout_width="0dp"
            android:layout_marginStart="10dp"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_total_items"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_total_value"
            style="@style/textStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/total_of_values"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_total_items" />

        <TextView
            android:id="@+id/tv_result_total_value"
            style="@style/textStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textAlignment="textStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_total_value"
            app:layout_constraintTop_toBottomOf="@id/tv_result_total_items" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cv_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_total">

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/bnt_save"
            style="@style/toobarTextStyle"
            android:textColor="@color/white"
            android:background="@drawable/rouded_button"
            android:textAllCaps="false"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>