<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/status_bar_color">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20sp"
        android:elevation="4dp"
        android:backgroundTint="@color/white"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_name_product"
                style="@style/textStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_result_name_client"
                style="@style/textStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_name_product"
                app:layout_constraintTop_toTopOf="@id/tv_name_product" />

            <TextView
                android:id="@+id/tv_description_product"
                style="@style/textStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_name_product" />

            <TextView
                android:id="@+id/tv_result_description_client"
                style="@style/textStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_description_product"
                app:layout_constraintTop_toTopOf="@id/tv_description_product" />

            <TextView
                android:id="@+id/tv_price_product"
                style="@style/textStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_un"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_description_product" />

            <TextView
                android:id="@+id/tv_result_price_client"
                style="@style/textStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_price_product"
                app:layout_constraintTop_toTopOf="@id/tv_price_product" />

            <TextView
                android:id="@+id/tv_amount_product"
                style="@style/textStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/amount"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_result_price_client" />

            <TextView
                android:id="@+id/tv_result_amount_client"
                style="@style/textStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textAlignment="textStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_amount_product"
                app:layout_constraintTop_toTopOf="@id/tv_amount_product" />

            <TextView
                android:id="@+id/tv_total_product"
                style="@style/textStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/total_price"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_amount_product" />

            <TextView
                android:id="@+id/tv_result_total_client"
                style="@style/textStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textAlignment="textStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_total_product"
                app:layout_constraintTop_toTopOf="@id/tv_total_product" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>