<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/status_bar_color"
    tools:context=".ui.orderregistration.OrderRegistrationFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/toolbarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:padding="8dp"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/tv_number_order"
            style="@style/toolbarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/title_toolbar_order"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <ImageButton
            android:id="@+id/btn_add_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:contentDescription="@string/button_for_include_item"
            android:padding="8dp"
            android:src="@drawable/ic_add"
            app:tint="@color/button_color" />

        <ImageButton
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:visibility="gone"
            android:layout_marginEnd="10dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            tools:visibility="visible"
            android:padding="8dp"
            android:src="@drawable/ic_delete"
            app:tint="@color/button_color" />

    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_client_name"
        android:background="@color/white"
        android:hint="@string/client_name"
        android:textColorHint="@color/hint_color"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_client_name"
            android:layout_marginHorizontal="10dp"
            style="@style/editTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_order_registration"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toTopOf="@id/cl_total"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_client_name" />

    <include
        android:id="@+id/empty_list"
        layout="@layout/layout_list_empty"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/cl_total"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_client_name" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_total"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="10dp"
        android:translationY="4dp"
        app:layout_constraintBottom_toTopOf="@id/cv_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rv_order_registration">

        <TextView
            android:id="@+id/tv_total_items"
            style="@style/textStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/total_of_items"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_result_total_items"
            style="@style/textStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textAlignment="textStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_total_items"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_total_value"
            style="@style/textStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/total_of_values"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_total_items" />

        <TextView
            android:id="@+id/tv_result_total_value"
            style="@style/textStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textAlignment="textStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_total_value"
            app:layout_constraintTop_toBottomOf="@id/tv_result_total_items" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cv_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_total">

        <Button
            android:id="@+id/btn_save"
            style="@style/toolbarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_button"
            android:clickable="true"
            android:text="@string/bnt_save"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>